# pyC2Ray

./: .README.md.swp  .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LW_development_notes_and_plan.txt  README.md  example_install.sh  hipnative.ini  meson.build  meson.options  prep_codes.tar  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  depends.yml  lint.yml
ci/: cscs.yml
docs/: .tutorials.rst.swp  conf.py  contributors.rst  examples.rst  index.rst  installation.rst  modules.rst  requirements.txt  tutorials.rst
docs/examples/: coarsen.ipynb  coarsen_all.ipynb  ifront.ipynb  multi_sources.ipynb  parameters_ifront.yml  parameters_mult.yml  parameters_shadow.yml  shadow.ipynb  src.txt  src_mult.txt
docs/tutorials/: asora_raytracing.ipynb  chemistry_solver.ipynb  cosmo_sim.ipynb  make_sim.ipynb  memory.ipynb  parameters.yml  params_example.ipynb  source_sink.ipynb
examples/: pyc2ray.daint.sh
examples/archive/cosmo_sim/: run_mpi.py
examples/archive/fake_cosmo_for_report/: fake_cosmo.py
examples/archive/paper_singlesource_old/: singlesource.py
examples/archive/raytracing_only/: run_example.py
examples/archive/rt_benchmark_old/: check_rates.py
examples/archive/single_source/: run_example.py
examples/debug/: parameters.yml  parameters_fstar.yml  test_class.py  test_helium.ipynb  test_no_helium.py  test_with_helium.py
examples/fstar_simulation/: parameters.yml  run_bursty.py  run_test.py  run_thesan.py
examples/local/: parameters.yml  run_test.py  src_mult.txt
examples/paper_eor_simulation/: parameters.yml
examples/paper_tests/raytracing_benchmark/: parameters.yml  run_test.py
examples/paper_tests/test1_Ifront/: make_plot.ipynb  parameters.yml  run_test.py
examples/pasc_arts4ska/: c2ray_pasc.py  evolve_pasc.py  parameters.yml  pyc2ray.daint.sh
examples/test_anisotropy/: debug_raytracing.ipynb  debug_raytracing.py
examples/unit_tests_hackathon/4_multiple_sources_mpi/: pyc2ray.daint.sh
install_scripts/: alps_daint_install.sh  example_install.sh  local_install.sh  pizdaint_install.sh
pyc2ray/: __init__.py  asora_core.py  c2ray_244paper.py  c2ray_base.py  c2ray_cubep3m.py  c2ray_fstar.py  c2ray_ramses.py  c2ray_test.py  c2ray_thesan.py  evolve.py  interface_p21c.py  load_extensions.py  meson.build  raytracing.py  sinks_model.py  source_model.py
pyc2ray/depr/: evolve_old.py
pyc2ray/radiation/: __init__.py  blackbody.py  common.py  spectra.py
pyc2ray/solver/: __init__.py  chemistry.py  hydrogen.py
pyc2ray/tables/: par_density_1.012Mpc.txt  par_density_1.518Mpc.txt  par_density_2.094Mpc.txt  par_redshift_1.518Mpc.txt  par_redshift_2.024Mpc.txt  par_redshift_2.094Mpc.txt  par_redshift_2.381Mpc.txt  par_stochastic_1.162Mpc.csv  par_stochastic_1.518Mpc.csv  par_stochastic_2.381Mpc.csv  resolutions.txt
pyc2ray/tables/SPICE_scatter_SFR/: README
pyc2ray/tables/clumping/: README  par_density_1.162Mpc.txt  par_density_2.024Mpc.txt  par_density_2.381Mpc.txt  par_redshift_1.012Mpc.txt  par_redshift_1.162Mpc.txt  par_stochastic_1.012Mpc.csv  par_stochastic_2.024Mpc.csv  par_stochastic_2.094Mpc.csv  resolutions.txt
pyc2ray/tables/dotN_thesan/: README  dotN_bins.txt  mass_bins.txt  pdf_dotN_thesan.npy  popt_extMhalo.txt  redshifts.txt
pyc2ray/tables/fesc_thesan/: README  fesc_thesan_tables.txt  mass_bin.txt  redshifts.txt
pyc2ray/tables/multifreq/: README  Verner1996_crossect.txt  cross_section_index.py
pyc2ray/utils/: __init__.py  check_source_formalism.py  logutils.py  other_utils.py  paramutils.py  source_converter.py  sourceutils.py
pyc2ray/visualization/: __init__.py  common.py  tomography.py
src/asora/: Makefile  Makefile_He  memory.cu  memory.cuh  memory_He.cu  meson.build  python_module.cu  python_test_module.cu  rates.cu  rates.cuh  raytracing.cu  raytracing.cuh  raytracing_He.cu  raytracing_He.cuh  tests.cu  tests.cuh  utils.cu  utils.cuh
src/asora_anisotr/: Makefile  memory.cu  memory.cuh  python_module.cu  rates.cu  rates.cuh  raytracing.cu  raytracing.cuh
src/asora_he/: Makefile  Makefile_He  memory_He.cu  memory_He.cuh  python_module_He.cu  rates.cu  rates.cuh  raytracing_He.cu  raytracing_He.cuh
src/c2ray/: chemistry.f90  meson.build  photorates.mod  raytracing.mod
src/friedrich/: Makefile  chemistry_he.f90  log  thermalevolution.f90
tables/: par_DC_1.39Mpc.csv  par_DC_2.38Mpc.csv
test/: plot_slices.ipynb  pyc2ray.daint.sh  test_solver.ipynb
test/debug/: Verner1996_spectidx.txt  calculate_table.ipynb  cooling_data.py  cross_section.py  cross_section_index.py  degub_rt.py  idea_for_improved_heating.ipynb  make_tables.py  parameters.yml  parameters_fstar.yml  test_class.py  test_helium.ipynb  test_tables.py  test_with_helium.py
test/debug/cosmo_debug/: parameters.yml  run_test.py
test/fstar_simulation/: parameters.yml  parameters_test.yml  run_bursty.py  run_test.py  run_thesan.py
test/local/: parameters.yml
test/paper_eor_simulation/: parameters.yml  run_test.py
test/paper_tests/raytracing_benchmark/: parameters.yml  run_benchmark.py  run_test.py
test/pasc_arts4ska/: c2ray_pasc.py  evolve_pasc.py  run_test.py
test/scaling/: parameters.yml  run_test.py
test/test_anisotropy/: debug_raytracing.ipynb
test/unit_tests_hackathon/4_multiple_sources_mpi/: parameters.yml  slurm.out
tests/: test_asora.py  test_asora_internal.py  test_c2ray.py
tests/data/: cinterp_output_010203.npy  cinterp_output_050505.npy  cinterp_output_100515.npy  photo_ionization_rate.npy
utils/: README.md  make_source_list.py  produce_baryonic_dens_RAMSES.py  produce_baryonic_dens_arepo
utils/CIC-UniformDMO/: Makefile  Makefile~  cic-old.f90  cic.f90  cic_dens.f90  cic_dens__genmod.f90  get_gadget_file.f90  globalvars.f90  globalvars.mod  read_multi_snaps.f90  read_multi_snaps__genmod.f90  run.sh  run_low.sh  write_out_cic.f90
utils/CIC-ZoomSims/: cic.f90  cic.f90~  cic_dens-old.f90  cic_dens.f90  cic_dens.f90~  get_gadget_file__genmod.f90  globalvars.f90~  globalvars.mod  output  run.sh~  run_low.sh~  write_out_cic.f90  write_out_cic.f90~
(+5 files in other folders)
