[build-system]
requires = [
    "meson-python",
    "numpy",             
    "charset_normalizer", 
]
build-backend = "mesonpy"

[project]
name = "pyc2ray"
description = "Python-wrapped and Accelerated version of C2Ray"
version = "0.1.0"
requires-python = ">=3.9.0"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "mpi4py",
    "tools21cm",
]
maintainers = [
    {name = "Patrick Hirling & Michele Bianco"},
]
