# Python sources
pyc2ray_sources = [
    '__init__.py',
    'asora_core.py',
    'c2ray_244paper.py',
    'c2ray_base.py',
    'c2ray_cubep3m.py',
    'c2ray_fstar.py',
    'c2ray_test.py',
    'c2ray_thesan.py',
    'evolve.py',
    'interface_p21c.py',
    'load_extensions.py',
    'raytracing.py',
    'sinks_model.py',
    'source_model.py',
    'radiation/__init__.py',
    'radiation/blackbody.py',
    'radiation/common.py',
    'radiation/spectra.py',
    'solver/__init__.py',
    'solver/chemistry.py',
    'solver/hydrogen.py',
    'tables/multifreq/cross_section_index.py',
    'utils/__init__.py',
    'utils/check_source_formalism.py',
    'utils/logutils.py',
    'utils/other_utils.py',
    'utils/paramutils.py',
    'utils/source_converter.py',
    'utils/sourceutils.py',
    'visualization/__init__.py',
    'visualization/common.py',
    'visualization/tomography.py',
]

py.install_sources(
    pyc2ray_sources,
    subdir: 'pyc2ray',
    pure: false,
    preserve_path: true,
)
